--- a/Demo/basicDemo/HelloWorld/HelloWorld.html
+++ b/Demo/basicDemo/HelloWorld/HelloWorld.html
@@ -116,7 +116,62 @@
         </div></div>
     </div>
 </section>
-<section></section>
-<footer></footer>
+<hr>
+<section class="contacts wrapper">
+    <form class="wrap">
+        <h4>FELL FREE TO WRITE US</h4>
+        <input type="text" placeholder="E-mail">
+        <input type="text" placeholder="Subject">
+        <textarea name="message" id="message" cols="30" rows="5" placeholder="Message"></textarea>
+        <button>SEND</button>
+    </form>
+    <div class="wrap">
+        <h2>Contacts</h2>
+        <p>Make any design your own using the Style Editor.
+            Personalize fonts, colors, and layouts to create the custom look you want.</p>
+        <ul>
+            <li>360 King Street<br>
+                Feastrvale Trevose, PA 19057
+            </li>
+            <li>(755) 564-84-12</li>
+            <li>youname@mail.com</li>
+        </ul>
+    </div>
+</section>
+<footer>
+    <div>
+        <h4></h4>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+    </div>
+    <div>
+        <h4></h4>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+    </div>
+    <div>
+        <h4></h4>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+    </div>
+    <div>
+        <h4></h4>
+        <p></p>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+</footer>
 </body>
 </html>
