--- a/Demo/basicDemo/HelloWorld/HelloWorld.html
+++ b/Demo/basicDemo/HelloWorld/HelloWorld.html
@@ -140,36 +140,36 @@
 </section>
 <footer>
     <div>
-        <h4></h4>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <h4>LEARN MORE</h4>
+        <p>How it works?</p>
+        <p>Meeting tools</p>
+        <p>Live streaming</p>
+        <p>Contact method</p>
     </div>
     <div>
-        <h4></h4>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <h4>ABOUT US</h4>
+        <p>About us</p>
+        <p>Features</p>
+        <p>Privacy police</p>
+        <p>Terms&Conditions</p>
     </div>
     <div>
-        <h4></h4>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <h4>SUPPORT</h4>
+        <p>FAQ</p>
+        <p>Contact us</p>
+        <p>Live chat</p>
+        <p>Phone call</p>
     </div>
     <div>
-        <h4></h4>
-        <p></p>
+        <h4>ENJOY YOUR LIFE</h4>
+        <p>Great web UI kit for designers, freelancers or business.</p>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><img src="./img/Twitter%20Icon.png" alt=""></li>
+            <li><img src="./img/Facebook%20Icon.png" alt=""></li>
+            <li><img src="./img/Google%20Icon.png" alt=""></li>
+            <li><img src="./img/Tumbler%20Icon.png" alt=""></li>
+            <li><img src="./img/Pinterest%20Icon.png" alt=""></li>
+            <li><img src="./img/LinkedIn%20Icon.png" alt=""></li>
         </ul>
     </div>
 </footer>
