--- a/Demo/basicDemo/12_15/12_15.html
+++ b/Demo/basicDemo/12_15/12_15.html
@@ -3,11 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>12_15</title>
+    <link rel="stylesheet" href="./12_15.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">>
 </head>
 <body>
 <div class="container">
-    <div class="nav"></div>
-    <div class="menu"></div>
+    <div class="nav">
+        <div class="item"><img src="./img/Item%201.PNG" alt="Item1"></div>
+        <div class="item"><img src="./img/Item%202.PNG" alt="Item2"></div>
+        <div class="item"><img src="./img/Item%203.png" alt="Item3"></div>
+        <div class="item"><img src="./img/Add%20App.png" alt="AddApp"></div>
+        <div class="icon">
+            <img src="./img/Grid.PNG" alt="Grid">
+            <img src="./img/Settings.png" alt="Settings">
+        </div>
+    </div>
+    <div class="menu">
+        <ul>
+            <li>MENU</li>
+            <li>Overview</li>
+            <li>Sales</li>
+            <li>Your Staff</li>
+            <li>Analytics&Targeting</li>
+            <li>What's New</li>
+        </ul>
+        <span></span>
+        <ul>
+            <li>YOUR PRODUCTS</li>
+            <li>BOOKS</li>
+            <li>Tutorials</li>
+            <li>Stocks</li>
+            <li>Infographics</li>
+        </ul>
+        <span></span>
+        <ul>
+            <li>DASHBOARD</li>
+            <li>Messages</li>
+            <li>Conncetions</li>
+            <li>Integrations</li>
+            <li>Account Settings</li>
+            <li>App Settings</li>
+        </ul>
+    </div>
     <div class="message"></div>
 </div>
 </body>
