--- a/Demo/basicDemo/12_15/12_15.html
+++ b/Demo/basicDemo/12_15/12_15.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>12_15</title>
     <link rel="stylesheet" href="./12_15.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -44,8 +43,25 @@
             <li>Account Settings</li>
             <li>App Settings</li>
         </ul>
+        <div class="goals">
+            <p>Monthly Goals &nbsp; $580/$3200</p>
+            <progress value="20" max="100"></progress>            
+        </div>
     </div>
-    <div class="message"></div>
+    <div class="message">
+        <div class="headBar">   
+            <h1>Message</h1>
+            <div class="userInfo">
+                <img src="./img/Photo.png" alt="Photo">
+                <p>Jordan J.</p>
+                <p>Administrator</p>
+                <img src="./img/dropdown.png" alt="dropdown">
+            </div>
+        </div>
+        <div class="friend"></div>
+        <div class="control"></div>
+        <div class="content"></div>
+    </div>
 </div>
 </body>
 </html>
