--- a/Demo/basicDemo/12_15/12_15.html
+++ b/Demo/basicDemo/12_15/12_15.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>12_15</title>
     <link rel="stylesheet" href="./12_15.css">
+    <link type="text/css" rel="stylesheet" href="chrome-extension://pioclpoplcdbaefihamjohnefbikjilc/content.css">
 </head>
 <body>
 <div class="container">
@@ -50,17 +51,140 @@
     </div>
     <div class="message">
         <div class="headBar">   
-            <h1>Message</h1>
+            <h1>Messages</h1>
             <div class="userInfo">
-                <img src="./img/Photo.png" alt="Photo">
-                <p>Jordan J.</p>
+                <img src="./img/Photo.png" alt="Photo" class="photo">
+                <p>Jordan J.</p><br>
                 <p>Administrator</p>
-                <img src="./img/dropdown.png" alt="dropdown">
+                <img src="./img/dropdown.png" alt="dropdown" class="dropdown">
             </div>
         </div>
-        <div class="friend"></div>
-        <div class="control"></div>
-        <div class="content"></div>
+        <div class="search">
+            <input type="search" placeholder="Search">
+        </div>
+        <div class="control">
+            <p>Bessie Berry</p><span class="status"></span>
+            <form action="">
+                <button><img src="" alt=""></button>
+                <button><img src="" alt=""></button>
+                <button><img src="" alt=""></button>
+                <span class="divider"></span>
+                <p>1 of 28</p>
+                <button></button>
+                <button></button>
+            </form>
+        </div>
+        <div class="content">
+            <div class="friend">
+                <div>
+                    <div class="friendInfo">
+                        <img src="" alt="">
+                        <p><span class="status"></span>Bessie Berry</p><br>
+                        <p>Twitter</p>
+                        <p>3m</p>
+                    </div>
+                    <div class="chatCut">
+                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                            In fact, it's relatively quick, and stable...</p>
+                        <div class="baseBlue">4</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="friendInfo">
+                        <img src="" alt="">
+                        <p><span class="status"></span>Bessie Berry</p><br>
+                        <p>Twitter</p>
+                        <p>3m</p>
+                    </div>
+                    <div class="chatCut">
+                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                            In fact, it's relatively quick, and stable...</p>
+                        <div class="baseBlue">4</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="friendInfo">
+                        <img src="" alt="">
+                        <p><span class="status"></span>Bessie Berry</p><br>
+                        <p>Twitter</p>
+                        <p>3m</p>
+                    </div>
+                    <div class="chatCut">
+                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                            In fact, it's relatively quick, and stable...</p>
+                        <div class="baseBlue">4</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="friendInfo">
+                        <img src="" alt="">
+                        <p><span class="status"></span>Bessie Berry</p><br>
+                        <p>Twitter</p>
+                        <p>3m</p>
+                    </div>
+                    <div class="chatCut">
+                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                            In fact, it's relatively quick, and stable...</p>
+                        <div class="baseBlue">4</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="friendInfo">
+                        <img src="" alt="">
+                        <p><span class="status"></span>Bessie Berry</p><br>
+                        <p>Twitter</p>
+                        <p>3m</p>
+                    </div>
+                    <div class="chatCut">
+                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                            In fact, it's relatively quick, and stable...</p>
+                        <div class="baseBlue">4</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="friendInfo">
+                        <img src="" alt="">
+                        <p><span class="status"></span>Bessie Berry</p><br>
+                        <p>Twitter</p>
+                        <p>3m</p>
+                    </div>
+                    <div class="chatCut">
+                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                            In fact, it's relatively quick, and stable...</p>
+                        <div class="baseBlue">4</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="friendInfo">
+                        <img src="" alt="">
+                        <p><span class="status"></span>Bessie Berry</p><br>
+                        <p>Twitter</p>
+                        <p>3m</p>
+                    </div>
+                    <div class="chatCut">
+                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                            In fact, it's relatively quick, and stable...</p>
+                        <div class="baseBlue">4</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="friendInfo">
+                        <img src="" alt="">
+                        <p><span class="status"></span>Bessie Berry</p><br>
+                        <p>Twitter</p>
+                        <p>3m</p>
+                    </div>
+                    <div class="chatCut">
+                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                            In fact, it's relatively quick, and stable...</p>
+                        <div class="baseBlue">4</div>
+                    </div>
+                </div>
+            </div>
+            <div class="chat">
+
+            </div>
+        </div>
     </div>
 </div>
 </body>
