--- a/Demo/basicDemo/12_15/12_15.html
+++ b/Demo/basicDemo/12_15/12_15.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div class="message">
-        <div class="headBar">   
+        <div class="topBar">
             <h1>Messages</h1>
             <div class="userInfo">
                 <img src="./img/Photo.png" alt="Photo" class="photo">
@@ -59,130 +59,116 @@
                 <img src="./img/dropdown.png" alt="dropdown" class="dropdown">
             </div>
         </div>
-        <div class="search">
-            <input type="search" placeholder="Search">
-        </div>
-        <div class="control">
-            <p>Bessie Berry</p><span class="status"></span>
-            <form action="">
-                <button><img src="" alt=""></button>
-                <button><img src="" alt=""></button>
-                <button><img src="" alt=""></button>
-                <span class="divider"></span>
-                <p>1 of 28</p>
-                <button></button>
-                <button></button>
-            </form>
-        </div>
-        <div class="content">
-            <div class="friend">
-                <div>
-                    <div class="friendInfo">
-                        <img src="" alt="">
-                        <p><span class="status"></span>Bessie Berry</p><br>
-                        <p>Twitter</p>
-                        <p>3m</p>
-                    </div>
-                    <div class="chatCut">
-                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                            In fact, it's relatively quick, and stable...</p>
-                        <div class="baseBlue">4</div>
-                    </div>
+        <div class="friend">
+            <div class="search">
+                <input type="search" placeholder="Search">
+            </div>
+            <div class="friendChat">
+            <div>
+                <div class="friendInfo">
+                    <img src="./img/Face1.png" alt="Face1">
+                    <p><span class="status"></span>Bessie Berry</p><br>
+                    <p>Twitter</p>
+                    <p>3m</p>
                 </div>
-                <div>
-                    <div class="friendInfo">
-                        <img src="" alt="">
-                        <p><span class="status"></span>Bessie Berry</p><br>
-                        <p>Twitter</p>
-                        <p>3m</p>
-                    </div>
-                    <div class="chatCut">
-                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                            In fact, it's relatively quick, and stable...</p>
-                        <div class="baseBlue">4</div>
-                    </div>
-                </div>
-                <div>
-                    <div class="friendInfo">
-                        <img src="" alt="">
-                        <p><span class="status"></span>Bessie Berry</p><br>
-                        <p>Twitter</p>
-                        <p>3m</p>
-                    </div>
-                    <div class="chatCut">
-                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                            In fact, it's relatively quick, and stable...</p>
-                        <div class="baseBlue">4</div>
-                    </div>
-                </div>
-                <div>
-                    <div class="friendInfo">
-                        <img src="" alt="">
-                        <p><span class="status"></span>Bessie Berry</p><br>
-                        <p>Twitter</p>
-                        <p>3m</p>
-                    </div>
-                    <div class="chatCut">
-                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                            In fact, it's relatively quick, and stable...</p>
-                        <div class="baseBlue">4</div>
-                    </div>
-                </div>
-                <div>
-                    <div class="friendInfo">
-                        <img src="" alt="">
-                        <p><span class="status"></span>Bessie Berry</p><br>
-                        <p>Twitter</p>
-                        <p>3m</p>
-                    </div>
-                    <div class="chatCut">
-                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                            In fact, it's relatively quick, and stable...</p>
-                        <div class="baseBlue">4</div>
-                    </div>
-                </div>
-                <div>
-                    <div class="friendInfo">
-                        <img src="" alt="">
-                        <p><span class="status"></span>Bessie Berry</p><br>
-                        <p>Twitter</p>
-                        <p>3m</p>
-                    </div>
-                    <div class="chatCut">
-                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                            In fact, it's relatively quick, and stable...</p>
-                        <div class="baseBlue">4</div>
-                    </div>
-                </div>
-                <div>
-                    <div class="friendInfo">
-                        <img src="" alt="">
-                        <p><span class="status"></span>Bessie Berry</p><br>
-                        <p>Twitter</p>
-                        <p>3m</p>
-                    </div>
-                    <div class="chatCut">
-                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                            In fact, it's relatively quick, and stable...</p>
-                        <div class="baseBlue">4</div>
-                    </div>
-                </div>
-                <div>
-                    <div class="friendInfo">
-                        <img src="" alt="">
-                        <p><span class="status"></span>Bessie Berry</p><br>
-                        <p>Twitter</p>
-                        <p>3m</p>
-                    </div>
-                    <div class="chatCut">
-                        <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                            In fact, it's relatively quick, and stable...</p>
-                        <div class="baseBlue">4</div>
-                    </div>
+                <div class="chatCut">
+                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                        In fact, it's relatively quick, and stable...</p>
+                    <div class="baseBlue">4</div>
                 </div>
             </div>
-            <div class="chat">
-
+            <div>
+                <div class="friendInfo">
+                    <img src="./img/Face2.png" alt="Face2">
+                    <p><span class="status"></span>Bessie Berry</p><br>
+                    <p>Twitter</p>
+                    <p>3m</p>
+                </div>
+                <div class="chatCut">
+                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                        In fact, it's relatively quick, and stable...</p>
+                    <div class="baseBlue">4</div>
+                </div>
+            </div>
+            <div>
+                <div class="friendInfo">
+                    <img src="./img/Face3.png" alt="Face3">
+                    <p><span class="status"></span>Bessie Berry</p><br>
+                    <p>Twitter</p>
+                    <p>3m</p>
+                </div>
+                <div class="chatCut">
+                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                        In fact, it's relatively quick, and stable...</p>
+                    <div class="baseBlue">4</div>
+                </div>
+            </div>
+            <div>
+                <div class="friendInfo">
+                    <img src="./img/Face4.png" alt="Face4">
+                    <p><span class="status"></span>Bessie Berry</p><br>
+                    <p>Twitter</p>
+                    <p>3m</p>
+                </div>
+                <div class="chatCut">
+                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                        In fact, it's relatively quick, and stable...</p>
+                    <div class="baseBlue">4</div>
+                </div>
+            </div>
+            <div>
+                <div class="friendInfo">
+                    <img src="./img/Face5.png" alt="Face5">
+                    <p><span class="status"></span>Bessie Berry</p><br>
+                    <p>Twitter</p>
+                    <p>3m</p>
+                </div>
+                <div class="chatCut">
+                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                        In fact, it's relatively quick, and stable...</p>
+                    <div class="baseBlue">4</div>
+                </div>
+            </div>
+            <div>
+                <div class="friendInfo">
+                    <img src="./img/Face6.png" alt="Face6">
+                    <p><span class="status"></span>Bessie Berry</p><br>
+                    <p>Twitter</p>
+                    <p>3m</p>
+                </div>
+                <div class="chatCut">
+                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                        In fact, it's relatively quick, and stable...</p>
+                    <div class="baseBlue">4</div>
+                </div>
+            </div>
+            <div>
+                <div class="friendInfo">
+                    <img src="./img/Face7.png" alt="Face7">
+                    <p><span class="status"></span>Bessie Berry</p><br>
+                    <p>Twitter</p>
+                    <p>3m</p>
+                </div>
+                <div class="chatCut">
+                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
+                        In fact, it's relatively quick, and stable...</p>
+                    <div class="baseBlue">4</div>
+                </div>
+            </div>
+            </div>
+        </div>
+        <div class="chat">
+            <div class="chatControl">
+                <p>Bessie Berry</p><span class="status"></span>
+                <form action="">
+                    <button><img src="" alt=""></button>
+                    <button><img src="" alt=""></button>
+                    <button><img src="" alt=""></button>
+                    <span class="divider"></span>
+                    <p>1 of 28</p>
+                    <button></button>
+                    <button></button>
+                </form>
             </div>
         </div>
     </div>
