--- a/Demo/basicDemo/12_15/12_15.html
+++ b/Demo/basicDemo/12_15/12_15.html
@@ -64,97 +64,17 @@
                 <input type="search" placeholder="Search">
             </div>
             <div class="friendChat">
-            <div>
-                <div class="friendInfo">
+                <div class="shortChat">
                     <img src="./img/Face1.png" alt="Face1">
-                    <p><span class="status"></span>Bessie Berry</p><br>
-                    <p>Twitter</p>
-                    <p>3m</p>
-                </div>
-                <div class="chatCut">
+                    <p><span><span class="status"></span>
+                        Bessie Berry</span><br>
+                        <span>Twitter</span>
+                        <span>3m</span>
+                    </p>
                     <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
                         In fact, it's relatively quick, and stable...</p>
                     <div class="baseBlue">4</div>
                 </div>
-            </div>
-            <div>
-                <div class="friendInfo">
-                    <img src="./img/Face2.png" alt="Face2">
-                    <p><span class="status"></span>Bessie Berry</p><br>
-                    <p>Twitter</p>
-                    <p>3m</p>
-                </div>
-                <div class="chatCut">
-                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                        In fact, it's relatively quick, and stable...</p>
-                    <div class="baseBlue">4</div>
-                </div>
-            </div>
-            <div>
-                <div class="friendInfo">
-                    <img src="./img/Face3.png" alt="Face3">
-                    <p><span class="status"></span>Bessie Berry</p><br>
-                    <p>Twitter</p>
-                    <p>3m</p>
-                </div>
-                <div class="chatCut">
-                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                        In fact, it's relatively quick, and stable...</p>
-                    <div class="baseBlue">4</div>
-                </div>
-            </div>
-            <div>
-                <div class="friendInfo">
-                    <img src="./img/Face4.png" alt="Face4">
-                    <p><span class="status"></span>Bessie Berry</p><br>
-                    <p>Twitter</p>
-                    <p>3m</p>
-                </div>
-                <div class="chatCut">
-                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                        In fact, it's relatively quick, and stable...</p>
-                    <div class="baseBlue">4</div>
-                </div>
-            </div>
-            <div>
-                <div class="friendInfo">
-                    <img src="./img/Face5.png" alt="Face5">
-                    <p><span class="status"></span>Bessie Berry</p><br>
-                    <p>Twitter</p>
-                    <p>3m</p>
-                </div>
-                <div class="chatCut">
-                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                        In fact, it's relatively quick, and stable...</p>
-                    <div class="baseBlue">4</div>
-                </div>
-            </div>
-            <div>
-                <div class="friendInfo">
-                    <img src="./img/Face6.png" alt="Face6">
-                    <p><span class="status"></span>Bessie Berry</p><br>
-                    <p>Twitter</p>
-                    <p>3m</p>
-                </div>
-                <div class="chatCut">
-                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                        In fact, it's relatively quick, and stable...</p>
-                    <div class="baseBlue">4</div>
-                </div>
-            </div>
-            <div>
-                <div class="friendInfo">
-                    <img src="./img/Face7.png" alt="Face7">
-                    <p><span class="status"></span>Bessie Berry</p><br>
-                    <p>Twitter</p>
-                    <p>3m</p>
-                </div>
-                <div class="chatCut">
-                    <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2.
-                        In fact, it's relatively quick, and stable...</p>
-                    <div class="baseBlue">4</div>
-                </div>
-            </div>
             </div>
         </div>
         <div class="chat">
