--- a/Demo/basicDemo/12_15/12_15.html
+++ b/Demo/basicDemo/12_15/12_15.html
@@ -146,13 +146,12 @@
             <div class="chatControl">
                 <p>Bessie Berry</p><span class="status"></span>
                 <form action="">
-                    <button><img src="" alt=""></button>
-                    <button><img src="" alt=""></button>
-                    <button><img src="" alt=""></button>
-                    <span class="divider"></span>
+                    <button type="button" id="user"><img src="./img/User%20icon.png" alt="User"></button>
+                    <button type="button" id="upload"><img src="./img/Upload%20icon.png" alt="Upload"></button>
+                    <button type="button" id="trash"><img src="./img/Trash%20icon.png" alt="Trash"></button>
                     <p>1 of 28</p>
-                    <button></button>
-                    <button></button>
+                    <button type="button" id="leftPage"><img src="./img/Arrow%20left.png" alt="Arrow Left"></button>
+                    <button type="button" id="rightPage"><img src="./img/Arrow%20right.png" alt="Arrow Right"></button>
                 </form>
             </div>
         </div>
