--- a/Demo/basicDemo/12_15/12_15.html
+++ b/Demo/basicDemo/12_15/12_15.html
@@ -181,6 +181,14 @@
                     <span>Bessie Berry</span><span>8:31 AM</span>
                     <p>I pay for the 4Mb/sec down, 512 Kb/sec up service from O2, and haven't had any problems. In fact, it's relatively quick, and stable. It's not perfect, but I really don't have issues, as long as I keep track of what I'm doing on it. I max out at about 3 Mb/sec down, and 350 Kb/sec up. Probably because of a noisy telephone line, not because I'm being throttled. When my uploads go over 25 KB/sec (note, bytes, not bits), my download speed suffers. This is expected, as downloads require upload bandwidth as well. </p>
                 </div>
+                    <div class="pic">
+                        <div>
+                            <img src="./img/Photo1.png" alt="photo1">
+                        </div>
+                        <div>
+                            <img src="./img/Photo2.png" alt="photo2 ">
+                        </div>
+                    </div>
                 </div>
                 <div class="inner">
                     <div class="oneChat">
