--- a/Demo/basicDemo/12_15/12_15.html
+++ b/Demo/basicDemo/12_15/12_15.html
@@ -201,6 +201,10 @@
                     </div>
                 </div>
             </div>
+            <div class="inner">
+                <button><img src="./img/Add%20icon.png" alt="Add icon"></button>
+                <input type="text" name="sendMessages" value="Well, kinda both :) but more of that second option, i`ve seen many systems infected and crawling with">
+            </div>
         </div>
     </div>
 </div>
